updated css and html

--- a/index.html
+++ b/index.html
@@ -13,54 +13,60 @@
           <hgroup>
             <h1>Instapitch</h1>
             <p>A solid elevator pitch is one of your most useful job search tools and the process can be both clarifying and illuminating. A good pitch addresses who you are, what you do and why you would be a perfect candidate… in a memorable way. It becomes a comfortable starting place, and reference point, for interviews, networking, social gatherings, and even interested family and friends.</p>
+            <div class='track'>
+              <ul>
+                <li class='track__dropdown'><a href='#'><span>Choose your track</span></a>
+              <ul>
+                <li><a href='#'><span>JavaScript</span></a></li>
+                <li class='last'><a href='#'><span>UX</span></a></li>
+              </ul>
+                </li>
+              </ul>
+            </div>
           </hgroup>
        </header>
 
+<section class="section group">
+  <h2> Now narrow it down to your core three strengths</h2>
+  <div class="col span_1_of_2">
+  This is column 1
+  <ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+  </ul>
+    </div>
+  <div class="col span_2_of_2">
+  This is column 2
+  <ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+  </ul>
+    </div>
+  </section>
 
 
+<section class="section group">
+  <h2> Prove it!</h2>
+  <div class="col span_1_of_2">
+  Evidence of a time you applied these skills from #1
+  <ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+  </ul>
+    </div>
+  <div class="col span_2_of_2">
+  Evidence of a time you applied these skills from #2
+  <ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+  </ul>
+    </div>
+  </section>
 
 
-
-       <section>
-          <div class = "strengths">
-          <img src ="strengths.jpg" class ="strengths__mainimage" alt ="secondimage">
-
-            <h1 class ="strengths__title">Now Narrow It Down To Your Three Core Strengths</h1>
-
-          <p class=".span_1_of_3">Skills</p>
-          <p class=".span_1_of_3">Personal Traits</p>
-          <ul list class="buttons__strengths__skills">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-          </ul>
-           <ul list class="buttons__strengths__traits">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-            </ul>
-          </div>
-      </section>
-
-       <section class ="banner">
-          <div class = "proven">
-          <img src ="proven.jpg" class ="proven__mainimage" alt ="thirdimage">
-
-            <h1 class ="proven__title">Prove It!</h1>
-
-          <p class="proven__input">Evidence of a time I applied #1</p>
-          <p class="proven__input">Evidence of a time I applied #2</p>
-        </section>
-
-
-
-
-
-
-
-    </body>
+</body>
 </html>
