--- a/index.html
+++ b/index.html
@@ -24,33 +24,16 @@
     </header>
 <!-- Dropdown Menu Test -->
       <section class="main clearfix">
-        <div class="fleft">
-          <p>In this example we use a gutter of 5 and stack the items with a slight offset</p>
-        </div>
-        <div class="fleft">
           <select id="cd-dropdown" name="cd-dropdown" class="cd-select">
-            <option value="-1" selected>Choose your favorite animal</option>
-            <option value="1" class="icon-monkey">Monkey</option>
-            <option value="2" class="icon-bear">Bear</option>
-            <option value="3" class="icon-squirrel">Squirrel</option>
-            <option value="4" class="icon-elephant">Elephant</option>
+            <option value="-1" selected>Choose your coding track...</option>
+            <option value="1">JavaScript</option>
+            <option value="2">Front-End UX Design & Development</option>
+            <option value="3">iOS Mobile Development</option>
+            <option value="4">Python</option>
+            <option value="4">Ruby on Rails</option>
           </select>
         </div>
       </section>
-    </div><!-- /container -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.dropdown.js"></script>
-    <script type="text/javascript">
-
-      $( function() {
-
-        $( '#cd-dropdown' ).dropdown( {
-          gutter : 5
-        } );
-
-      });
-
-    </script>
 <!--     End Dropdown Menu Test -->
 
     <section class="dropdown-menu">
