Styled buttons and added button titles

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
 
 <section class="section-buttons">
-  <h2> These are my strongest...</h2>
+  <h2 class="main-buttons"> These are my strongest...</h2>
   <div class="col span_1_of_2">
-  Skills
+  <h3 class="main-buttons">Skills</h3>
   <ul>
     <li><a href="#" class="section-buttons-a">+ Object Oriented Modeling</a></li>
     <li><a href="#" class="section-buttons-a">+ Optimizing Performance</a></li>
@@ -62,16 +62,16 @@
   </ul>
     </div>
   <div class="col span_2_of_2">
-  Personal Traits
+  <h3 class="main-buttons">Personal Traits</h3>
   <ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
+    <li><a href="#" class="section-buttons-a">+ Analytical Problem Solving</a></li>
+    <li><a href="#" class="section-buttons-a">+ Team Leadership</a></li>
+    <li><a href="#" class="section-buttons-a">+ Flexible & Adaptable</a></li>
   </ul>
     </div>
   </section>
 
-
+<!--
 <section class="section group">
   <h2> Prove it!</h2>
   <div class="col span_1_of_2">
@@ -90,7 +90,7 @@
     <li>3</li>
   </ul>
     </div>
-  </section>
+  </section> -->
 
 
 </body>
